objects/Term_Value__c.object
<CustomObject>
    <fields>
        <fullName>Default_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default Value</description>
        <label>Default Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Sort Order</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Term Values</relationshipLabel>
        <relationshipName>Term_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Term Value</label>
    <nameField>
        <label>Term Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Term Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>